hide userManager under lib/auth.ts

--- a/public/silent-callback.html
+++ b/public/silent-callback.html
@@ -2,8 +2,8 @@
 <html>
   <body>
     <script type="module">
-      import { userManager } from "/src/lib/auth.ts";
-      userManager.signinSilentCallback().catch(console.error);
+      import { signInSilentCallback } from "/src/lib/auth.ts";
+      signInSilentCallback();
     </script>
   </body>
 </html>
